--- a/challenge-1/Dockerfile
+++ b/challenge-1/Dockerfile
@@ -1,14 +1,12 @@
-# Usa una imagen base de Alpine que es más ligera
 FROM python:3.9-alpine
 
-# Establece el directorio de trabajo
 WORKDIR /app
 
-# Copia el script del servidor al contenedor
 COPY main.py .
 
-# Define el punto de entrada del contenedor
+RUN addgroup --system appgroup && adduser --system --ingroup appgroup appuser
+USER appuser
+
 ENTRYPOINT ["python", "main.py"]
 
-# Exponer el puerto por defecto 8000
 EXPOSE 8000
