--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: challenge-1
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/http-server-challenge:latest
