--- a/challenge-2/http-server-challenge/templates/service.yaml
+++ b/challenge-2/http-server-challenge/templates/service.yaml
@@ -8,8 +8,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: {{ .Values.containerPort }}
       protocol: TCP
-      name: http
   selector:
     {{- include "http-server-challenge.selectorLabels" . | nindent 4 }}
