--- a/challenge-2/http-server-challenge/values.yaml
+++ b/challenge-2/http-server-challenge/values.yaml
@@ -14,6 +14,8 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+containerPort: 8000
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
@@ -29,8 +31,8 @@ podAnnotations: {}
 podLabels: {}
 
 podSecurityContext:
-  runAsUser: 1000       # UID del usuario http-server-challenge
-  runAsGroup: 1000      # GID del grupo http-server-challenge
+  runAsUser: 1000
+  runAsGroup: 1000
   allowPrivilegeEscalation: false
 
 securityContext: {}
@@ -43,7 +45,8 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 8000
+  port: 80
+
 
 ingress:
   enabled: true
