--- a/challenge-2/http-server-challenge/values.yaml
+++ b/challenge-2/http-server-challenge/values.yaml
@@ -29,10 +29,10 @@ serviceAccount:
 podAnnotations: {}
 podLabels: {}
 
-podSecurityContext:
-  runAsUser: 1000
-  runAsGroup: 1000
-  allowPrivilegeEscalation: false
+podSecurityContext: {}
+  # runAsUser: 1000
+  # runAsGroup: 1000
+  # allowPrivilegeEscalation: false
 
 securityContext: {}
   # capabilities:
