chore: fix some errors and add values validation with schema

--- a/challenge-2/http-server-challenge/templates/service.yaml
+++ b/challenge-2/http-server-challenge/templates/service.yaml
@@ -10,5 +10,6 @@ spec:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.containerPort }}
       protocol: TCP
+      name: server
   selector:
     {{- include "http-server-challenge.selectorLabels" . | nindent 4 }}
