--- a/challenge-2/http-server-challenge/templates/deployment.yaml
+++ b/challenge-2/http-server-challenge/templates/deployment.yaml
@@ -37,9 +37,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: server
-              containerPort: {{ .Values.containerPort }}
-              protocol: TCP
+              - containerPort: {{ .Values.containerPort }}
           livenessProbe:
             {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
