--- a/challenge-2/http-server-challenge/values.yaml
+++ b/challenge-2/http-server-challenge/values.yaml
@@ -48,14 +48,14 @@ service:
 
 ingress:
   enabled: true
-  className: nginx
+  className: "nginx"
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
   hosts:
     - host: http-server-challenge.local
       paths:
         - path: /
-          pathType: ImplementationSpecific
+          pathType: Prefix
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
