--- a/.github/workflows/terraform-lints.yml
+++ b/.github/workflows/terraform-lints.yml
@@ -1,9 +1,9 @@
 name: Terraform Checks
 
-on:
+on: 
   pull_request:
-    paths:
-      - 'challenge-3/**'
+    branches:
+      - master
 
 jobs:
   terraform:
