test: install latest brew with github action

--- a/.github/workflows/terraform-lints.yml
+++ b/.github/workflows/terraform-lints.yml
@@ -16,11 +16,7 @@ jobs:
 
     - name: Set up Homebrew
       run: |
-        sudo apt-get update
-        sudo apt-get install -y build-essential
-        /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-        echo 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"' >>~/.profile
-        eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
+        sudo /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v3
