--- a/.github/workflows/terraform-lints.yml
+++ b/.github/workflows/terraform-lints.yml
@@ -27,6 +27,11 @@ jobs:
         working-directory: challenge-3
         soft_fail: true
 
+    - uses: actions/cache@v4
+      name: Cache plugin dir
+      with:
+        path: ~/.tflint.d/plugins
+        key: ${{ matrix.os }}-tflint-${{ hashFiles('.tflint.hcl') }}    
 
     - uses: terraform-linters/setup-tflint@v4
       name: Setup TFLint
