feature: trigger only pipelines on changes in paths

--- a/.github/workflows/helm-e2e.yml
+++ b/.github/workflows/helm-e2e.yml
@@ -1,9 +1,11 @@
 name: Helm test end-to-end
 
-on:
-  push:
+on: 
+  pull_request:
     branches:
       - master
+    paths:
+      - 'challenge-2/**'
 
 jobs:
   lint-test:
